# neo4j-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  readme.md  run.py  setup_dev.py
examples/: claude_desktop_config.json  env_example.txt
examples/queries/: sample_queries.cypher
src/neo4j_mcp/: __init__.py  client.py  config.py  connection.py  server.py
tests/: test_basic.py
